# playercore

./: .gitignore  CMakeLists.txt  README.md  abstractmodel.cpp  abstractmodelfactory.cpp  dataaccessobject.cpp  dbusmanager.cpp  facade.cpp  guimanager.cpp  mediascanner.cpp  mpris2_player.cpp  notify.cpp  player.cpp  playlistmanager.cpp  playlists.cpp  settingmanager.cpp  tagreader.cpp
include/: abstractmodel.h  abstractmodelfactory.h  common.h  dataaccessobject.h  dbusmanager.h  facade.h  guimanager.h  mediascanner.h  mpris2_player.h  notify.h  player.h  playlistmanager.h  playlists.h  settingmanager.h  states.h  tagreader.h
pkg/: playercore-config-version.cmake.in  playercore-config.cmake.in
